Update style.css with correct header spacing

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ footer {
   max-width: 50%;
   height: auto;
   display: block;
-  margin: 1rem auto;
+  margin: 2px auto;
 }
 
 /* === FOOTER === */
